# bit-place

./: Dockerfile  docker-compose.yml  workspace.code-workspace
backend/: .env  Cargo.toml  prod.env
backend/src/: lib.rs  main.rs
backend/src/api/: grid.rs  message.rs  mod.rs  point.rs
backend/src/sockets/: mod.rs  server.rs  session.rs  socket.rs
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte
frontend/src/components/: Editor.svelte  Grid.svelte
frontend/src/helpers/: popup.ts  socket.ts
