[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = [] }
actix-files = { version = "0.6.0", features = [] }
actix-redis = "0.11.0"
redis-async = { version = "0.12.1", default_features = false, features = ["tokio10"] }
actix = "0.12.0"
actix-web-actors = "4.1"
env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
serde = { version="1", features = ["derive"] }
futures = "0.3.21"
dotenv = "0.15.0"
uuid = { version= "1.0.0", features=["v4", "fast-rng"] }

[[bin]]
name = "backend"